# GMUCourseSearchUtility

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/gmu_courses/: banner.py  cache.py  cli.py  filters.py  history.py  ical.py  models.py  render.py  schedule.py
tests/: test_filters.py  test_history.py  test_ical.py  test_models.py
tests/fixtures/: cs_search_202670.json  cs_search_p100.json  terms.json
