[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmu-courses"
version = "0.1.0"
description = "CLI for searching George Mason University's Schedule of Classes, with day/time/conflict filters and color-coded results."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kevin Koch", email = "kevinkoch10@gmail.com" }]
keywords = ["gmu", "george-mason", "banner", "course-search", "schedule", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
    "platformdirs>=4.2",
    "truststore>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gmu = "gmu_courses.cli:main"

[project.urls]
Homepage = "https://github.com/KevinK24/GMUCourseSearchUtility"
Issues = "https://github.com/KevinK24/GMUCourseSearchUtility/issues"

[tool.setuptools.packages.find]
where = ["src"]
